# schedarray

./: README.md  pyproject.toml  setup.py
docs/: .gitignore  DECORATOR_NAMING.md  DECORATOR_POWER.md  PHASE3.md  README.rst  SLURMIFY_INTEGRATION.md  SLURM_COMPARISON.md  cli_usage.rst  decorator_power.rst  decorator_usage.rst  make.bat  slurm_comparison.rst
schedarray/: __init__.py  __main__.py  cli.py  task.py
schedarray/core/: __init__.py  scheduler.py  service.py  worker_pool.py
schedarray/docs/: CLI_EXAMPLES.md  CLI_USAGE.md  DECORATOR_USAGE.md  TASK_DECORATOR.md  cli_examples.rst  conf.py  decorator_naming.rst  index.rst  phase3.rst  slurmify_integration.rst  task_decorator.rst
schedarray/examples/: decorator_example.py
schedarray/integration/: __init__.py  decorator.py  job_tracker.py  multiprocessing.py  slurmify.py
