[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schedarray"
version = "0.1.0"
description = "Cross-platform job scheduler using SQLite, providing SLURM/SGE-like functionality on Windows, macOS, and Linux."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mark Brooks"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "decologr",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20.0"]

[project.scripts]
schedarray = "schedarray.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schedarray*"]

